--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,8 @@
 <div class="header_flash_wrapper">
   <a href="/">
-    <div id="flashcontent_1"></div>
+    <div id="flashcontent_1">
+      <div class="cap"></div>
+    </div>
   </a>
 </div>
 
