--- a/app/views/users/_profile_menu.html.erb
+++ b/app/views/users/_profile_menu.html.erb
@@ -1,3 +1,6 @@
+<h1>Личное пространство</h1>
+Здесь мы храним для вас все ваши комментарии, избранные страницы и прочее
+
 <div class="post_category_menu">
   <ul>
     <%= content_tag :li, link_to("Профиль", dashboard_profile_path),
