--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -5,7 +5,7 @@
       <li>
         <span class="thumb"><%= link_to image_tag(activity.logo.url), activity %></span>
         <span class="name"><%= link_to activity.title, activity %></span>
-        <span class="geo"><%= activity.metro_station.title %></span>
+        <span class="geo"><%= activity.metro_station.try(:title) %></span>
       </li>
     <% end %>
   </ul>
