--- a/app/views/activities/entertainment.html.erb
+++ b/app/views/activities/entertainment.html.erb
@@ -1,5 +1,4 @@
 <div class="entertainment_list">
-
   <div class="sidebar">
     <%= render 'search_enter_form' %>
   </div>
@@ -7,37 +6,38 @@
   <div class="common">
     <div class="catalog">
       <div class="filter_sorter">
-        <div class="sorter_wraper">
-          <div class="cell">
-            Сортировать по
-            <span class="sort_name">
-              <%= link_to "названию", '#', :class => 'order_by', 'data-order' => 'title' %>
-            </span>,
-            <span class="sort_date">
-              <%= link_to "дате добавления", "#", :class => 'order_by', 'data-order' => 'created_at' %>
-            </span> или
-            <span class="sort_rating">
-              <%= link_to "рейтингу", "#", :class => 'order_by', 'data-order' => 'users_rating' %>
-            </span>
-          </div>
-          <div class="cell">
-            <%= check_box_tag :only_approved, '1', false, class: :remote_action %>
-            <span class="sim_check"></span>
-            <%= label_tag 'only_approved', 'Только одобренные', class: :hidden_checkbox %>
-          </div>
-        </div>
+	<div class="sorter_wraper">
+	  <div class="cell">
+	    Сортировать по
+	    <span class="sort_name">
+	      <%= link_to "названию", '#', :class => 'order_by', 'data-order' => 'title' %>
+	    </span>,
+	    <span class="sort_date">
+	      <%= link_to "дате добавления", "#", :class => 'order_by', 'data-order' => 'created_at' %>
+	    </span> или
+	    <span class="sort_rating">
+	      <%= link_to "рейтингу", "#", :class => 'order_by', 'data-order' => 'users_rating' %>
+	    </span>
+	  </div>
+	  <div class="cell">
+	    <%= check_box_tag :only_approved, '1', false, class: :remote_action %>
+	    <%= label_tag 'only_approved', class: :hidden_checkbox, id: :only_approved do %>
+	      <span class="sim_check"></span> Только одобренные
+	    <% end %>
+	  </div>
+	</div>
       </div>
 
 
       <div class="activities">
-        <%= render 'm_entertainment', activities: @activities %>
+	<%= render 'm_entertainment', activities: @activities %>
       </div>
 
       <div class="clear"></div>
 
       <div class="pager">
-        <ul>
-        </ul>
+	<ul>
+	</ul>
       </div>
 
     </div>
