forgot add TODO comment

--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -86,6 +86,7 @@
   </div>
 <% end %>
 
+<!-- TODO: remove it to coffee -->
 <script type="text/javascript">
   $(document).ready(function(){
     $(".filter_sorter li label, #only_approved").live('click',function(){
