--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -19,7 +19,7 @@
             	Парк Горького<br />
               18 августа<br />
               10:00-23:00<br />
-              <span style="color:#e7393b">Вход свободный</span>
+              <span style="color:#bb224c">Вход свободный</span>
             </div>
           </div>
       </div>
@@ -29,7 +29,7 @@
             	Парк Горького<br />
               18 августа<br />
               10:00-23:00<br />
-              <span style="color:#e7393b">Вход свободный</span>
+              <span style="color:#bb224c">Вход свободный</span>
             </div>
           </div>
       </div>
@@ -39,7 +39,7 @@
             	Парк Горького<br />
               18 августа<br />
               10:00-23:00<br />
-              <span style="color:#e7393b">Вход свободный</span>
+              <span style="color:#bb224c">Вход свободный</span>
             </div>
           </div>
       </div>
@@ -58,7 +58,7 @@
             	Парк Горького<br />
               18 августа<br />
               10:00-23:00<br />
-              <span style="color:#e7393b">Вход свободный</span>
+              <span style="color:#bb224c">Вход свободный</span>
             </div>  
         </div>
       </div>
@@ -68,7 +68,7 @@
             	Парк Горького<br />
               18 августа<br />
               10:00-23:00<br />
-              <span style="color:#e7393b">Вход свободный</span>
+              <span style="color:#bb224c">Вход свободный</span>
             </div>
         </div>
       </div>
@@ -95,15 +95,15 @@
 
 <div class="main_content">
   <div>
-    <div class="adv"><a href=""><img src="/assets/samp/adv_pic.jpg" alt="" /></a></div>
+    <div class="adv"><a href="/about_bank"><img src="/assets/bank_bright_card.png" alt="" /></a></div>
     <div class="bank_info">
       <div class="title">Добро пожаловать в мир ярких людей!</div>
-      <div class="order_bank_catd">Президент Московского Кредитного Банка<br />Александр НИКОЛАШИН</div>
+      <div class="order_bank_catd">Президент МОСКОВСКОГО КРЕДИТНОГО БАНКА<br />Александр Николашин</div>
       <div class="bank_text">
 
-МОСКОВСКИЙ КРЕДИТНЫЙ БАНК в честь своего 20-летия дарит городу праздник – детский творческий фестиваль «Яркие люди». 
+МОСКОВСКИЙ КРЕДИТНЫЙ БАНК <br />в честь своего 20-летия дарит городу праздник – детский творческий фестиваль «Яркие люди». 
 <br />
-Гости мероприятия смогут не только весело провести время, но и открыть двери в мир творческих профессий и искусства.<br />
+Гости мероприятия смогут <br />не только весело провести время, но и открыть двери в мир творческих профессий <br />и искусства.<br />
 
         <%= link_to 'Подробнее', page_path('about_bank'), class: :to_bank_link %>
         
