--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -15,12 +15,12 @@
             <div class="thumb">
               <a href="">
               <span class="mask"></span>
-              <img src="/assets/samp/samp_4.jpg" width="205px" height="205px" alt="" />
+              <img src="/assets/org_com_face_1.jpg" width="205px" height="205px" alt="" />
               </a>
             </div>
-            <span class="name">Дмитрий Борисов</span>
-            <span class="info">Ресторатор, основатель центра "Шардам"</span>
-            <span class="desc">29.03.2001</span>
+            <span class="name">Левашова Надежда Юрьевна</span>
+            <span class="toemail">naranpaeva@mkb.ru<span>
+
           </div>
         </div>
         <div class="org_people_preview">
@@ -67,14 +67,14 @@
           <div class="thumb">
             <a href="">
             <span class="mask"></span>
-            <img src="/assets/samp/samp_4.jpg" width="85" height="85" alt="" />
+            <img src="/assets/org_com_face_4.jpg" width="85" height="85" alt="" />
             </a>
           </div>
           <div class="info">
             <div class="name">
-              Дмитрий Борисов
+              Василиса
             </div>
-             Контент-директор проекта. Общаться по поводу добавления ваших материалов на сайт, фото- и видеоконтента, принятия решений в какой-то области
+             
             <div class="contact">
               <span class="toemail">Написать письмо</span><span class="phone">Тел.: +7 906 079-17-67</span>
             </div>
@@ -89,9 +89,9 @@
           </div>
           <div class="info">
             <div class="name">
-              Дмитрий Борисов
+              Мария Демидова
             </div>
-             Контент-директор проекта. Общаться по поводу добавления ваших материалов на сайт, фото- и видеоконтента, принятия решений в какой-то области
+             
             <div class="contact">
               <span class="toemail">Написать письмо</span><span class="phone">Тел.: +7 906 079-17-67</span>
             </div>
