--- a/app/views/activities/show.html.erb
+++ b/app/views/activities/show.html.erb
@@ -49,7 +49,7 @@
 	      </tr>
 	    <% end %>
 	    <tr>
-	      <th><span>АО</span></th>
+	      <th><span></span></th>
 	      <td><%= @activity.region.title %><br />
 	    </tr>
 	    <tr>
