--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -11,7 +11,7 @@
       <div class="clear"></div>
     </div>
     <div class="about_contest">
-      <div class="thumb"><%= image_tag @contest.picture.url(:medium) %></div>
+      <div class="thumb"><%= image_tag @contest.picture.url(:big) %></div>
       <div class="left_part">
         <div class="title"><%= @l = @contest.description.split(/[!\.\?]/).first %><%= @contest.description[@l.length,1] %></div>
         <%= @contest.description %>
