--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -14,11 +14,11 @@
       <div class="center column">
         <div class="menu">
           <ul>
-            <li><a href="">Москва для детей</a></li>
-            <li><a href="">Журнал</a></li>
-      	    <li><%= link_to 'Конкурсы', contests_path %></li>
-      	    <li><%= link_to 'Экспертный совет', experts_path %></li>
-      	    <li><%= link_to 'Спецпроекты', special_projects_path %></li>
+            <li><%= link_to "Москва для детей", activities_path %></li>
+            <li><%= link_to "Журнал", articles_path %></li>
+            <li><%= link_to 'Конкурсы', contests_path %></li>
+            <li><%= link_to 'Экспертный совет', experts_path %></li>
+            <li><%= link_to 'Спецпроекты', special_projects_path %></li>
           </ul>
         </div>
         <div class="copy">
