--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -8,7 +8,7 @@
         </div>
         <div class="post_share">
           <div class="title">Делись с друзьями</div>
-          sdf dfg f g
+          <%= render 'shared/share_social' %>
         </div>
       </div>
       <div class="description">
