--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -9,6 +9,7 @@
         <div class="post_share">
           <div class="title">Делись с друзьями</div>
           <%= render 'shared/share_social' %>
+          <div class="clear"></div>
         </div>
       </div>
       <div class="description">
