--- a/app/views/special_projects/show.html.erb
+++ b/app/views/special_projects/show.html.erb
@@ -20,6 +20,7 @@
       <div class="post_share">
         <div class="title">Делись с друзьями</div>
         <%= render 'shared/share_social' %>
+        <div class="clear"></div>
       </div>
     </div>
 
