--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -6,7 +6,7 @@
       </li>
       <li class="sl_user"><a rel="slider_user" href="#">Участники</a></li>
       <li class="sl_org">
-	<%= link_to 'Оргкомитет', page_path('org_komitet'), class: :active, rel: :slider_org %>
+	<%= link_to 'Оргкомитет', page_path('org_komitet'), rel: :slider_org %>
       </li>
     </ul>
   </div>
