--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -2,8 +2,8 @@
   <div class="common">
     <div class="post_category_menu">
       <ul>
-      <li class="org_ico active"><%= link_to "Оргкомитет", page_path('org_komitet') %></li>
         <li class="about_ico"><%= link_to "О фестивале", page_path('about_festival') %></li>
+        <li class="org_ico active"><%= link_to "Оргкомитет", page_path('org_komitet') %></li>
       </ul>
       <div class="clear">
       </div>
@@ -19,6 +19,7 @@
               </a>
             </div>
             <span class="name">Левашова Надежда Юрьевна</span>
+            <span class="info">МОСКОВСКИЙ КРЕДИТНЫЙ БАНК<br />Генеральный спонсор и организатор<br />фестиваля "Яркие люди"</span>
             <span class="toemail">naranpaeva@mkb.ru<span>
 
           </div>
@@ -28,12 +29,12 @@
             <div class="thumb">
               <a href="">
               <span class="mask"></span>
-              <img src="/assets/samp/samp_4.jpg" width="205px" height="205px" alt="" />
+              <img src="/assets/org_com_face_2.jpg" width="205px" height="205px" alt="" />
               </a>
             </div>
-            <span class="name">Дмитрий Борисов</span>
-            <span class="info">Ресторатор, основатель центра "Шардам"</span>
-            <span class="desc">Получив образование химика, стала юристом, в 1959 была избрана членом Парламента от Финчли. В 1970 была назначена министром образования и науки в правительстве консерватора Эдварда Хита.</span>
+            <span class="name">Мунтян Ольга</span>
+            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"<br />организатор фестиваля "Яркие люди"</span>
+            
           </div>
         </div>
         <div class="org_people_preview">
@@ -41,28 +42,23 @@
             <div class="thumb">
               <a href="">
               <span class="mask"></span>
-              <img src="/assets/samp/samp_4.jpg" width="205px" height="205px" alt="" />
+              <img src="/assets/org_com_face_3.jpg" width="205px" height="205px" alt="" />
               </a>
             </div>
-            <span class="name">Дмитрий Борисов</span>
-            <span class="info">Ресторатор, основатель центра "Шардам"</span>
-            <span class="desc">Получив образование химика, стала юристом, в 1959 была избрана членом Парламента от Финчли. В 1970 была назначена министром образования и науки в правительстве консерватора Эдварда Хита.</span>
+            <span class="name">Гальперина Мария</span>
+            <span class="info">КОМПАНИЯ "БРАЙТ ПИПЛ"<br />организатор фестиваля "Яркие люди"</span>
+            
           </div>
         </div>
         <div class="clear">
         </div>
       </div>
-      <div class="left_part">
-        <div class="title">
+      
+      
+      <div class="title">
           Оргкомитет фестиваля "Яркие люди 2012"
-        </div>
-         Организатором фестиваля является маркетинговая компания Брайт пипл. Мы специализируемся на создании уникальных событий в культурной и социальной сферах. <br />
-         Мы много всего умеем делать хорошо, но больше всего мы любим организовывать детские мероприятия. Наша работа - это всегда нестандартные, и самое главное - яркие решения!
       </div>
-      <div class="right_part">
-        <div class="title">
-          Управляющие по различным вопросам
-        </div>
+      <div class="left_part">
         <div class="other_people_preview">
           <div class="thumb">
             <a href="">
@@ -72,28 +68,35 @@
           </div>
           <div class="info">
             <div class="name">
-              Василиса
+              Василиса Никифорова
             </div>
-             
+            PR-менеджер проекта.<br />
+            Обращаться по вопросам аккредитации журналистов.
             <div class="contact">
-              <span class="toemail">Написать письмо</span><span class="phone">Тел.: +7 906 079-17-67</span>
+              <span class="toemail">v_nicol@bk.ru</span><br /><span class="phone">+7 906 072-04-42</span>
             </div>
           </div>
         </div>
+       
+      </div>
+      <div class="right_part">
+        
+        
         <div class="other_people_preview">
           <div class="thumb">
             <a href="">
             <span class="mask"></span>
-            <img src="/assets/samp/samp_4.jpg" width="85" height="85" alt="" />
+            <img src="/assets/org_com_face_5.jpg" width="85" height="85" alt="" />
             </a>
           </div>
           <div class="info">
             <div class="name">
               Мария Демидова
             </div>
-             
+            Продюсер проекта.<br />
+            Обращаться по вопросам участия в фестивале.
             <div class="contact">
-              <span class="toemail">Написать письмо</span><span class="phone">Тел.: +7 906 079-17-67</span>
+              <span class="toemail">demidova@bright-people.ru</span><span class="phone">+7 926 884-12-27</span>
             </div>
           </div>
         </div>
