--- a/app/assets/stylesheets/council_slider.css
+++ b/app/assets/stylesheets/council_slider.css
@@ -94,7 +94,7 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
         background: url(/assets/small_arrow_right.png) no-repeat;
         float: right;
         margin: 100px 20px 0 0;
-        display: block; cursor:pointer
+        display: none; cursor:pointer
 }
 
 
@@ -111,7 +111,7 @@ article a.thumb img { height:160px; width:130px; border-radius:0 0 40px 40px;}
         background: url(/assets/small_arrow_left.png) no-repeat;
         float: left;
         margin: 100px 0 0 20px;
-        display: block; cursor:pointer
+        display: none; cursor:pointer
 }
 
 #slide1:checked ~ #active label:nth-child(1),
