--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -40,7 +40,7 @@
 	  <!-- Put this script tag to the <head> of your page -->
 	  <script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
 	  <script type="text/javascript">
-	    VK.init({apiId: API_ID, onlyWidgets: true});
+	    VK.init({apiId: 2953652, onlyWidgets: true});
 	  </script>
 	  <!-- Put this div tag to the place, where the Like block will be -->
 	  <div id="vk_like"></div>
