--- a/app/views/contest_memberships/_memberships_list.html.erb
+++ b/app/views/contest_memberships/_memberships_list.html.erb
@@ -5,10 +5,11 @@
       <div class="name"><%= link_to membership.name, contest_membership_path(membership, contest_id: contest.id) %></div>
       <div class="author"><%= membership.user.name %></div>
       <div class="comments_count"><%= membership.comments_count %></div>
-      <div class="rating_block">
+
         <div class="rating" data-rating="<%= membership.rating %>" data-membership-id="<%= membership.id %>" data-lock=<%= !can?(:vote, membership) or !contest.active? %>>Звезды</div>
         <%= render partial: 'vote_count', locals: {memb: membership } %>
-      </div>
+
     </div>
   </div>
 <% end %>
+<div class="clear"></div>
