--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -106,7 +106,7 @@
 	<ul class="">
 	  <li><%= link_to 'Кружки и студии', activities_path %></li>
 	  <li><%= link_to 'Яркий журнал', articles_path %></li>
-	  <li class="current"><%= link_to 'Фестиваль', '#' %>
+	  <li class="current"><%= link_to "Фестиваль", page_path('org_komitet') %>
 	    <div class="sub_menu">
 	      <ul>
 		<li><%= link_to "О фестивале", page_path('about_festival') %></li>
