admin editor sty;es

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -542,7 +542,7 @@ span.sim_check.active { background-position:0px 0px; }
 .description h3 { color:#c14425; font-size:18px; font-family:Futura; padding:10px 0px}
 .description .question-class { color:#343434; font-weight:bold; padding:12px 0px 12px 30px; background:url(/assets/question-class.png) no-repeat 5px 6px;}
 
-qoute-class { color:#000000; font-family:Futura; font-size:20px; display:block; padding:10px 0px; text-align:center}
+.quote-class { color:#000000; font-family:Futura; font-size:20px; display:block; padding:10px 0px; text-align:center}
 
 .description img {  -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; -khtml-border-radius:6px;}
 
