add main titles

--- a/app/views/activities/educational.html.erb
+++ b/app/views/activities/educational.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Кружки и Студии
+<% end %>
+
 <div class="workshop_list">
   <div class="catalog">
     <h1>Детские кружки Москвы</h1>
