--- a/app/views/activities/entertainment.html.erb
+++ b/app/views/activities/entertainment.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Кружки и Студии
+<% end %>
+
 <div class="entertainment_list">
   <div class="sidebar">
     <%= render 'search_enter_form' %>
