--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Яркий Журнал
+<% end %>
+
 <div class="pages">
   <div class="journal_title">
     <h1>Добро пожаловать на страницы Яркого Журнала</h1>
