--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -1,6 +1,8 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Экспертный Совет
+<% end %>
+
 <div class="pages">
-  
-  
   <div class="expert_list_wrapper">
   <%= render 'title' %>
     <div class="expert_list">
