--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -2,6 +2,10 @@
   <body id="main_page">
 <% end %>
 
+<% content_for :title do %>
+  Фестиваль Яркие Люди
+<% end %>
+
 <% content_for :before_center do %>
   <%= render 'slider' %>
 <% end %>
