--- a/app/views/pages/about_festival.html.erb
+++ b/app/views/pages/about_festival.html.erb
@@ -1,3 +1,7 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | о Фестивале
+<% end %>
+
 <div class="pages">
   <div class="common">
     <div class="post_category_menu">
