--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Конкурсы
+<% end %>
 <div class="pages">
   <div class="common">
     <h1>Конкурсы ярких людей</h1>
