--- a/app/views/pages/org_komitet.html.erb
+++ b/app/views/pages/org_komitet.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Оргкомитет
+<% end %>
 <div class="pages">
   <div class="common">
     <div class="post_category_menu">
