--- a/app/views/special_projects/index.html.erb
+++ b/app/views/special_projects/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Специальный Проект
+<% end %>
 <div class="pages">
   <div class="common">
     <div class="sorter_wraper">
